# PEfilterpkg

./: .gitignore  Makefile.am  README.mkd  configure.ac
lib/: Makefile.am
src/: Makefile.am
src/pefilter/: Makefile.am  pefilter.cpp
src/pefilterpico/: Makefile.am  pefilterpico.cpp
src/pefiltertag/: Makefile.am  pefiltertag.cpp
src/pefiltertrad/: Makefile.am  pefiltertrad.cpp
src/petagstats/: Makefile.am  petagstats.cpp
tests/: LC1_chr_1k.bam  LC1_chr_1k.bam.bai  pefilter.sh  pefilterestimate.sh  pefilterpico.sh  pefiltertag.sh  pico.sh  tagstats.sh  trad.sh
